--- a/tasks/add_repo_os_family_debian.yml
+++ b/tasks/add_repo_os_family_debian.yml
@@ -1,9 +1,10 @@
 ---
-- ansible.builtin.set_fact:
+- name: 'Файл для размещения ключа репозитория: /usr/share/keyrings/docker.asc'
+  ansible.builtin.set_fact:
     # Так как по ссылке ниже ключ размещён в формате ASCII, расширение файла должно быть `.asc`, а не `.gpg`
     _key_file: /usr/share/keyrings/docker.asc
 
-- name: Скачать GPG-ключ репозитория
+- name: Установить GPG-ключ репозитория
   ansible.builtin.get_url:
     url: https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg
     dest: '{{ _key_file }}'
