--- a/tasks/add_repo_os_family_debian.yml
+++ b/tasks/add_repo_os_family_debian.yml
@@ -14,5 +14,6 @@
 - name: Добавить официальный PPA
   ansible.builtin.apt_repository:
     repo: 'deb [arch=amd64 signed-by={{ _key_file }}] https://download.docker.com/linux/{{ ansible_distribution | lower }} {{ ansible_lsb.codename }} stable'
+    filename: docker
     state: present
   become: true
