--- a/meta/main.yml
+++ b/meta/main.yml
@@ -11,6 +11,12 @@ galaxy_info:
     - name: Debian
       versions:
         - all
+    - name: EL
+      versions:
+        - all
+    - name: Fedora
+      versions:
+        - all
     - name: Ubuntu
       versions:
         - all
