--- a/tasks/add_repo_os_family_redhat.yml
+++ b/tasks/add_repo_os_family_redhat.yml
@@ -1,11 +1,11 @@
 ---
-- name: Установить GPG-ключ репозитория
+- name: '{{ ansible_os_family }}: установить публичный ключ репозитория'
   ansible.builtin.rpm_key:
     key: https://download.docker.com/linux/{{ ansible_distribution | lower }}/gpg
     state: present
   become: true
 
-- name: Добавить официальный репозиторий
+- name: '{{ ansible_os_family }}: добавить официальный репозиторий'
   ansible.builtin.get_url:
     url: https://download.docker.com/linux/{{ ansible_distribution | lower }}/docker-ce.repo
     dest: '/etc/yum.repos.d/docker-ce.repo'
