--- a/tasks/add_repo_os_family_redhat.yml
+++ b/tasks/add_repo_os_family_redhat.yml
@@ -8,7 +8,7 @@
 - name: '{{ ansible_os_family }}: добавить официальный репозиторий'
   ansible.builtin.get_url:
     url: https://download.docker.com/linux/{{ ansible_distribution | lower }}/docker-ce.repo
-    dest: '/etc/yum.repos.d/docker-ce.repo'
+    dest: /etc/yum.repos.d/docker-ce.repo
     owner: root
     group: root
     mode: 0644
