--- a/meta/main.yml
+++ b/meta/main.yml
@@ -32,3 +32,7 @@ argument_specs:
         description: Дополнительные параметры dockerd
         required: false
         type: dict
+      prune_older_hours:
+        description:
+        required: false
+        type: int
